// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gradient tests on web renders a Gradient 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient using array prop styles 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
      "height": "200px",
      "width": "200px",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient using prop styles 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
      "height": "200px",
      "width": "200px",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient using stylesheets 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
      "height": "200px",
      "width": "200px",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient with an angle (-45) 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(-45deg, #F9F9F9 0%, #EDEDED 100%)",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient with an angle (45) 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(45deg, #F9F9F9 0%, #EDEDED 100%)",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient with an angle (90) 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(90deg, #F9F9F9 0%, #EDEDED 100%)",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient with an angle (180) 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(180deg, #F9F9F9 0%, #EDEDED 100%)",
    }
  }
/>
`;

exports[`Gradient tests on web renders a Gradient with an angle (270) 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(270deg, #F9F9F9 0%, #EDEDED 100%)",
    }
  }
/>
`;
